--- a/index.html
+++ b/index.html
@@ -46,15 +46,14 @@
             <li class="nav__item">
               <a href="#about" class="nav__link">About</a>
             </li>
-            
+
             <li class="nav__item">
-              <a href="#features" class="nav__link">Features</a>
+              <a href="#features" class="nav__link">Services</a>
             </li>
-            
+
             <li class="nav__item">
               <a href="#members" class="nav__link">Members</a>
             </li>
-
           </ul>
 
           <div class="nav__close" id="nav-close">
@@ -99,8 +98,9 @@
                       APPS
                     </h1>
                     <p class="home__description">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Deleniti omnis excepturi natus ad perferendis temporibus?
+                      Empowering individuals to navigate the job market with
+                      confidence, Carval aims to minimize the risk of falling
+                      victim to fraudulent job listings.
                     </p>
                   </div>
 
@@ -116,7 +116,11 @@
             <section class="swiper-slide">
               <div class="home__content grid">
                 <div class="home__group">
-                  <img src="assets/img/solution1.png" alt="" class="home__img" />
+                  <img
+                    src="assets/img/solution1.png"
+                    alt=""
+                    class="home__img"
+                  />
                   <div class="home__indicator"></div>
 
                   <div class="home__details-img">
@@ -135,9 +139,8 @@
                     VACANCY
                   </h1>
                   <p class="home__description">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Expedita harum ratione laboriosam dignissimos totam.
-                    Explicabo!
+                    Using our latest machine learning model, get information
+                    about whether you are applying for the right job or not.
                   </p>
 
                   <div class="home__buttons">
@@ -172,8 +175,8 @@
                     ARTICLE
                   </h1>
                   <p class="home__description">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Expedita eum, perferendis praesentium a ut odit.
+                    Through our app, you can also, get information about jobs
+                    around the world so you won't get caught anymore
                   </p>
 
                   <div class="home__buttons">
@@ -195,9 +198,12 @@
           <div class="about__data">
             <h2 class="section__title about__title">ABOUT CARVAL</h2>
             <p class="about__description">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste
-              exercitationem dolore tempore iure voluptas eum nulla odio unde
-              officiis obcaecati.
+              Designed to offer a reliable solution, our application addresses
+              the challenges faced by job seekers dealing with fraudulent job
+              listings. We empower users to verify the authenticity of job
+              postings, enabling them to pursue opportunities without the fear
+              of scams. Join us in simplifying the job search experience and
+              safeguarding your time and money
             </p>
             <a href="#" class="button">Know more</a>
           </div>
@@ -227,7 +233,7 @@
 
       <!--==================== MEMBER ====================-->
       <section class="section member" id="members">
-        <h2 class="section__title ">CARVAL TEAM</h2>
+        <h2 class="section__title">CARVAL TEAM</h2>
 
         <div class="member__container container">
           <div class="swiper member-swiper">
@@ -265,7 +271,7 @@
                 <img src="assets/img/team3.png" alt="" class="member__img" />
                 <h3 class="member__title">Eka Wira Yudha</h3>
                 <span class="member__subtitle">Sriwijaya University</span>
-                <h3 class="member__title">M315BSY0951 </h3>
+                <h3 class="member__title">M315BSY0951</h3>
                 <a
                   href="https://www.linkedin.com/in/iman-carrazi/"
                   class="button member__button"
@@ -306,7 +312,9 @@
                 <div class="member__MD">MD</div>
                 <img src="assets/img/team5.png" alt="" class="member__img" />
                 <h3 class="member__title">Billy Franko</h3>
-                <span class="member__subtitle">Multi Data Palembang University</span>
+                <span class="member__subtitle"
+                  >Multi Data Palembang University</span
+                >
                 <h3 class="member__title">A694BSY2183</h3>
                 <a
                   href="https://www.linkedin.com/in/iman-carrazi/"
@@ -315,7 +323,6 @@
                   <i class="bi bi-linkedin"></i>
                 </a>
               </div>
-
             </div>
           </div>
         </div>
@@ -339,7 +346,7 @@
         <div class="membersletter__container container">
           <h2 class="section__title">Our newsletter</h2>
           <p class="membersletter__description">
-            Promotion member products and sales. Directly to your inbox
+            Have something to say? Share your thoughts with us! We value your voice
           </p>
 
           <form action="" class="membersletter__form">
@@ -348,7 +355,7 @@
               placeholder="Enter your email"
               class="membersletter__input"
             />
-            <button class="button">Subscribe</button>
+            <button class="button">Send</button>
           </form>
         </div>
       </section>
@@ -441,7 +448,9 @@
         </div>
       </div>
 
-      <span class="footer__copy">&#169; Carval Capstone Team. All rigths reserved</span>
+      <span class="footer__copy"
+        >&#169; Carval Capstone Team. All rigths reserved</span
+      >
 
       <img src="assets/img/footer2.png" alt="" class="footer__img-two" />
       <img src="assets/img/footer1.png" alt="" class="footer__img-one" />
