--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
           <form action="" class="membersletter__form">
             <input
               type="text"
-              placeholder="Enter your email"
+              placeholder="Enter your message"
               class="membersletter__input"
             />
             <button class="button">Send</button>
